[tool.poetry]
name = "snow-bench"
version = "0.1.0"
description = "Try snow-bench for batch querying Automation on Snowflake."
authors = ["wangzhiwei <noparking188@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7"
pytest-playwright = "0.4.4"
pandas = "2.1.4"
streamlit = "1.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
